# constrained-dynamics

./: .gitignore  README.md  constrained-dynamics.ipynb  setup.cfg
src/constraineddynamics/: circle_constraint.py  constraint.py  env.py  forces.py  linear_constraint.py  particle_system.py  simulation.py  types.py
tests/: test_cases.py
